--- a/class programs/greetV5/index.html
+++ b/class programs/greetV5/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Greetings V5</title>
-  </head>
-  <body>
+</head>
+
+<body>
+    <h1>hello everyone</h1>
     <form action="greet" method="post">
-      <label>Enter Your Name</label>
-      <input type="text" name="aName" >
-      <br>
-      <input type="submit" name="submit" value="submit">
+        <label>Enter Your Name</label>
+        <input type="text" name="aName">
+        <br>
+        <input type="submit" name="submit" value="submit">
     </form>
 
-  </body>
+</body>
+
 </html>
